[package]
name = "pn07"
version = "1.0.3"
description = "太阳能终端配置软件"
authors = ["Kerinlin"]
license = "MIT"
edition = "2021"
rust-version = "1.68.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
tauri = { version = "1.2.4", features = ["api-all", "system-tray", "devtools"] }
serde = "1.0"
thiserror = "1.0"
serde_json = "1.0.117"
simplelog = "0.12.2"
log = "0.4.21"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
